# projeto-final-etic-2

./: README.md  docker-compose.yml  package-lock.json  package.json
backend/: dockerfile  pyproject.toml
backend/src/: config.py  main.py
backend/src/clients/: database.py
backend/src/controllers/: RequestLogic.py
backend/src/models/: api.py  user_model.py
backend/src/routes/: auth.py  requests.py
frontend/: dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: BackButton.js  BackButtonSVG.js  Button.js  LogoSmall.js  LogoSmall2.js  LogoSmallSVG.js  NextButton.js  PageWrapper.js  QuestionnaireSquare.js  SearchBar.js  TopContainer.js
frontend/src/helpers/: QuestionnaireAPI.js
frontend/src/styles/: App.css
public/: index.html  manifest.json
src/: App.js  index.js
src/components/: BackButton.js  BackButtonQuestionnaire1.js  Button.js  LogoSmall.js  NextButton.js  QuestionnaireSquare.js  TutorialSwiper.js
src/helpers/: RefreshPage.js
src/pages/questionnaire/: Questionnaire.js  Questionnaire1.js  Questionnaire2.js  Questionnaire3.js  Questionnaire4.js  Questionnaire5.js
src/pages/signup/: Signup.js  SignupPage.js
src/pages/tutorial/: TutorialLastPage.js  TutorialSwiper.js  Tutorial_1.js  Tutorial_2.js
src/pages/welcome/: FirstPage.js  SignupORlogin.js
src/styles/: App.css
src/styles/components/: back_button.css  back_button_questionnaire1.css  button.css  logo_small.css  next_button.css  questionnaire_square.css
src/styles/questionnaire/: questionnaire.css  (+1 more)
(+78 files in other folders)
