[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["David Trindade"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
sqlalchemy = "^2.0.1"
pydantic = "^1.10.4"
pymysql = "^1.0.2"
mysqlclient = "^2.1.1"
mysql = "^0.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
